--- a/Website/style.css
+++ b/Website/style.css
@@ -61,7 +61,12 @@ body {
 .card-title {
   width: 100%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card-category p {
+  /* font-size: 0.75rem; */
 }
 
 .about p {
@@ -99,7 +104,7 @@ body {
   height: 5rem;
   padding: 3rem;
   margin-top: 3rem;
-  box-shadow: 6px 6px 24px 3px #cccccc;
+  box-shadow: 0 0 15px 3px #aaaaaa;
 }
 
 .store-card {
@@ -109,7 +114,7 @@ body {
   flex-direction: column;
 }
 
-.button:hover {
+.button:hover, .search-button:hover {
   background-color: #dddddd;
   cursor: pointer;
 }
@@ -146,6 +151,41 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 3rem;
+}
+
+#search {
+  margin-left: 0;
+  width: 25vw;
+  height: 3rem;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  border: solid 3px #eeeeee;
+  background-color: #eeeeee;
+  box-sizing: border-box;
+}
+
+#search:hover {
+  background-color: #dddddd
+}
+
+.search-button {
+  margin-left: 0.5rem;
+  border-radius: 1rem;
+  height: 2rem;
+  padding: 0.5rem;
+  background: #eeeeee;
+}
+
+.search-elems {
+  display: flex;
+  align-items: center;
+  margin-right: 3rem;
+}
+
+#search:focus {
+  outline: none;
+  background-color: #dddddd;
+  border: solid 3px #888888;
 }
 
 /* Modifications for mobile friendliness */
@@ -187,5 +227,30 @@ body {
   }
   .footer a:last-child {
     margin-bottom: 0.5rem;
+  }
+  #search {
+    width: 100%;
+    font-size: 1rem;
+  }
+  .title {
+    grid-area: header;
+    margin-bottom: 1rem;
+  }
+  .icon {
+    grid-area: icon;
+  }
+  .header {
+    display: grid;
+    grid-template-areas:
+        "header icon"
+        "search search";
+    height: auto;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .search-elems {
+    grid-area: search;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
