--- a/Website/style.css
+++ b/Website/style.css
@@ -187,6 +187,42 @@ body {
   background-color: #dddddd;
   border: solid 3px #888888;
 }
+
+.add-points {
+  margin-top: 0.5rem;
+  width: 30rem;
+  height: 3rem;
+  font-size: 1.2rem;
+  border-radius: 1rem;
+  border: solid 3px #ffffff;
+  background-color: #ffffff;
+  box-sizing: border-box;
+}
+
+.add-points:hover {
+  background-color: #dddddd
+}
+
+.add-points-button {
+  margin-top: 0.5rem;
+  display: flex;
+  border-radius: 1rem;
+  padding: 1rem;
+  background: #ffffff;
+  border: transparent;
+  font-size: 1.2rem;
+}
+
+.add-points-button:hover {
+  cursor: pointer;
+  background-color: #dddddd;
+}
+
+.add-points:focus {
+  outline: none;
+  background-color: #dddddd;
+  border: solid 3px #888888;
+}
 /* FAQ page styling, margin, fonts etc */
 .content-faq {
   padding: 3rem;
@@ -215,6 +251,7 @@ body {
 .content-terms, .content-pp p {
   margin-top: 0.5rem;
   font-size: 1.2rem;
+}
 
 /* Modifications for mobile friendliness */
 @media screen and (max-width: 1000px) {
